--- a/homework/three/writeup.tex
+++ b/homework/three/writeup.tex
@@ -75,6 +75,7 @@ the distance matrix, giving a lower bound of $\Omega(n^2)$.
 \subsection{Write a pseudo-code for this algorithm.}
  
 \begin{lstlisting}
+find_outlier():
   biggestneighbor = null
   for item in data:
     nearest_neighbor = nearest neighbor of item
